force-app/main/default/objects/Reward_Usage__c/fields/Autoline_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Autoline_Invoice_Date__c</fullName>
    <label>Autoline Invoice Date</label>
    <type>Date</type>
</CustomField>