force-app/main/default/objects/Reward_Usage__c/fields/Autoline_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Autoline_Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <label>Autoline Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>