force-app/main/default/objects/Reward_Usage__c/fields/Credit_Movement__c.field-meta.xml
<CustomField>
    <fullName>Credit_Movement__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Debit&apos;,  (Credit_Amount__c * (-1)), Credit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit ( +/- )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>