force-app/main/default/objects/Reward_Usage__c/fields/DSA_No__c.field-meta.xml
<CustomField>
    <fullName>DSA_No__c</fullName>
    <label>DSA No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>