force-app/main/default/objects/Reward_Usage__c/fields/e_Invoice__c.field-meta.xml
<CustomField>
    <fullName>e_Invoice__c</fullName>
    <inlineHelpText>For e-shop</inlineHelpText>
    <label>e-Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>