force-app/main/default/objects/Reward_Usage__c/fields/e_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>e_Invoice_Date__c</fullName>
    <label>e-Invoice Date</label>
    <type>Date</type>
</CustomField>