force-app/main/default/objects/Reward_Usage__c/fields/e_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>e_Invoice_URL__c</fullName>
    <description>For e-Shop</description>
    <label>e-Invoice URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>