force-app/main/default/objects/Reward_Usage__c/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <description>Reason for Reward Credit Extension</description>
    <inlineHelpText>Reason for Reward Credit Extension</inlineHelpText>
    <label>Extension Reason</label>
    <type>TextArea</type>
</CustomField>