force-app/main/default/objects/Reward_Usage__c/fields/Is_Extended__c.field-meta.xml
<CustomField>
    <fullName>Is_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator shows if the Expired Reward Usage has been extended</description>
    <inlineHelpText>Indicator shows if the Expired Reward Usage has been extended</inlineHelpText>
    <label>Is Extended?</label>
    <type>Checkbox</type>
</CustomField>