force-app/main/default/objects/Reward_Usage__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Location__c, &quot;Leng Kee&quot;),&quot;Leng Kee&quot;,
IF(ISPICKVAL($User.Location__c, &quot;Pandan Gardens&quot;), &quot;Pandan Gardens&quot;,
IF(ISPICKVAL($User.Location__c, &quot;Sin Ming&quot;), &quot;Sin Ming&quot; ,&quot;&quot; )))</defaultValue>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leng Kee</fullName>
            </value>
            <value>
                <fullName>Pandan Gardens</fullName>
            </value>
            <value>
                <fullName>Sin Ming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>