force-app/main/default/objects/Reward_Usage__c/fields/Migrated_Data__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Data__c</fullName>
    <formula>Reward__r.Migrated_Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>