force-app/main/default/objects/Reward_Usage__c/fields/New_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Expiry_Date__c</fullName>
    <description>New Expiry Date for Credit Extension</description>
    <inlineHelpText>New Expiry Date for Credit Extension</inlineHelpText>
    <label>New Expiry Date</label>
    <type>Date</type>
</CustomField>