force-app/main/default/objects/Reward_Usage__c/fields/Non_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Credit_Amount__c</fullName>
    <formula>IF( (TEXT(Type__c) != &apos;Expiry&apos; &amp;&amp; TEXT(Type__c) != &apos;Adjustment&apos;), Invoice_Amount__c - Credit_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>