force-app/main/default/objects/Reward_Usage__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Reward Usages</relationshipLabel>
    <relationshipName>Reward_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>