force-app/main/default/objects/Reward_Usage__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>