force-app/main/default/objects/Reward_Usage__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>TEXT(Reward__r.Source__c)</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>