force-app/main/default/objects/Reward_Usage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired</fullName>
                <color>#BBBBBB</color>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Hold</fullName>
                <color>#FFFF66</color>
                <label>Hold</label>
            </value>
            <value>
                <fullName>Issued</fullName>
                <color>#57F17C</color>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Provisioning</fullName>
                <color>#FFFF66</color>
                <label>Provisioning</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#BBBBBB</color>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Utilised</fullName>
                <color>#FF0000</color>
                <label>Utilised</label>
            </value>
            <value>
                <fullName>Write-Back</fullName>
                <color>#6666CC</color>
                <label>Write-Back</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>