force-app/main/default/objects/Reward_Usage__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Used to capture :
Autoline Invoice Date, Expiry Date + 1, Extension Date for Debit Usage, 
Refund Date for Credit Usage</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>