force-app/main/default/objects/Reward_Usage__c/recordTypes/Debit.recordType-meta.xml
<RecordType>
    <fullName>Debit</fullName>
    <active>true</active>
    <description>Debit from Customer (i.e. Credit Deduction)</description>
    <label>Debit</label>
</RecordType>