force-app/main/default/objects/Reward_Usage__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Reward__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Autoline_Invoice_Date__c</columns>
    <columns>Autoline_Invoice_Number__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Payment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Master_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>