force-app/main/default/objects/Reward_Usage__c/listViews/Credit_Usages.listView-meta.xml
<ListView>
    <fullName>Credit_Usages</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reward__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Autoline_Invoice_Date__c</columns>
    <columns>Autoline_Invoice_Number__c</columns>
    <columns>Credit_Note__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Payment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reward_Usage__c.Credit</value>
    </filters>
    <label>Credit Usages</label>
</ListView>