force-app/main/default/objects/Reward_Usage__c/listViews/Expired_Usages_MIT.listView-meta.xml
<ListView>
    <fullName>Expired_Usages_MIT</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reward__c</columns>
    <columns>Brand__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>Source__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reward_Usage__c.Debit</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Expiry</value>
    </filters>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>MIT</value>
    </filters>
    <label>Expired Usages - MIT</label>
</ListView>